--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,9 +21,9 @@
   <title>{{site.title}}{% if page.title %} | {{ page.title }}{% endif %}</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  {% stylesheet main %}
-  {% javascript vendor/modernizr %}
-  {% javascript vendor/zepto %}
+  {% stylesheet sass/main %}
+  {% javascript js/vendor/modernizr %}
+  {% javascript js/vendor/zepto %}
 
   <!-- Facebook Pixel Code -->
   {% if site.fbpixel %}
